# side-huddle

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  ax_speaker_probe.swift  config.mk.example  go.mod  screen_speaker_probe.swift
.github/workflows/: CI.yml  release-macos.yml
bindings/go/: bridge.go  perms_darwin.go  perms_darwin.m  perms_other.go  sidehuddle.go
bindings/go/lib/: .gitignore
bindings/node/: demo.js
bindings/python/: demo.py  pyproject.toml
bindings/python/meetinglistener/: _lib.py
bindings/python/sidehuddle/: __init__.py
cmd/demo/: cocoa_darwin.go  cocoa_darwin.m  cocoa_other.go  main.go  notify_darwin.go  overlay_darwin.go  title_test.go
cmd/side-huddle/: cocoa_darwin.go  cocoa_darwin.m  overlay_darwin.go  overlay_darwin.m
core/: CMakeLists.txt
core/include/: meetinglistener.h
core/src/: mix.c  monitor.c
core/src/darwin/: detect.c  platform.c  process.c  record_mic.m  record_tap.m  window.m
core/src/linux/: detect.c  record.c
core/src/windows/: detect.c  record.c
crates/side-huddle/: Cargo.toml
crates/side-huddle-node/: Cargo.toml  build.rs  package-lock.json  package.json
crates/side-huddle-node/npm/darwin-arm64/: README.md  package.json
crates/side-huddle-node/npm/darwin-x64/: README.md  package.json
crates/side-huddle-node/npm/linux-x64-gnu/: README.md  package.json
crates/side-huddle-node/npm/win32-x64-msvc/: README.md  package.json
crates/side-huddle-node/src/: lib.rs
crates/side-huddle-py/: Cargo.toml  build.rs
crates/side-huddle-py/src/: lib.rs
crates/side-huddle/examples/: demo.rs  meeting_recorder.rs  speaker_probe.rs
crates/side-huddle/src/: apps.rs  ffi.rs  lib.rs  mix.rs  monitor.rs  recorder.rs
crates/side-huddle/src/platform/: mod.rs
crates/side-huddle/src/platform/darwin/: detect.rs  mod.rs  process.rs  record_mic.rs  record_tap.rs  speaker.rs  window.rs  window_watcher.rs
crates/side-huddle/src/platform/windows/: mod.rs
docs/: architecture.dot  c.md  go.md  node.md  python.md  rust.md
docs/superpowers/plans/: 2026-05-06-recording-hud-hotkey.md
docs/superpowers/specs/: 2026-05-06-recording-hud-hotkey-design.md
include/: side_huddle.h
packaging/macos/: package.sh
tools/bundle/: Info.plist  SideHuddle.icns  make-icon.sh
