[workspace]
    resolver = "2"
    members  = [
        "crates/side-huddle",
        "crates/side-huddle-node",
        "crates/side-huddle-py",
    ]

    [workspace.package]
    version     = "0.1.1"
    edition     = "2021"
    authors     = ["Ken Chau <kchau@microsoft.com>"]
    license     = "MIT"
    repository  = "https://github.com/kenotron-ms/side-huddle"
    homepage    = "https://github.com/kenotron-ms/side-huddle"
    description = "Detect meetings locally and capture audio as WAV"
    keywords    = ["meetings", "audio", "recording", "teams", "zoom"]
    categories  = ["multimedia::audio", "os::macos-apis"]
    readme      = "README.md"

    [workspace.dependencies]
    crossbeam-channel = "0.5"
    log               = "0.4"
    thiserror         = "2"
    