[build-system]
requires      = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name        = "side-huddle"
description = "Detect Teams / Zoom / Google Meet meetings and capture audio as WAV"
readme      = { file = "../../README.md", content-type = "text/markdown" }
license     = { text = "MIT" }
authors     = [{ name = "Ken Chau", email = "kchau@microsoft.com" }]
requires-python = ">=3.9"
keywords    = ["meetings", "audio", "recording", "teams", "zoom", "google-meet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
dynamic = ["version"]

[project.urls]
Homepage      = "https://github.com/kenotron-ms/side-huddle"
Documentation = "https://github.com/kenotron-ms/side-huddle/blob/main/docs/python.md"
Repository    = "https://github.com/kenotron-ms/side-huddle"
"Bug Tracker" = "https://github.com/kenotron-ms/side-huddle/issues"

[tool.maturin]
manifest-path  = "../../crates/side-huddle-py/Cargo.toml"
module-name    = "sidehuddle"
strip          = true
